--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.4",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "angular-animations": "^0.11.0",
+    "chart.js": "^3.6.0",
+    "firebase": "^9.16.0",
+    "moment": "^2.29.4",
+    "ng2-charts": "^5.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
